--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}\\exercises\\chapter1-expressions-operations.js"
+            "program": "${workspaceFolder}\\chapters\\chapter-3-objects.js"
         }
     ]
 }
