--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}\\exercises\\chapter-4-functions-exercises.js"
+            "program": "${workspaceFolder}\\javascript\\chapters\\chapter-1-statements.js"
         }
     ]
 }
